# agentkit

./: Cargo.toml  README.md
benchmarks/compose-bench/: README.md
benchmarks/compose-bench/results/2026-06-10-multi-model/: anthropic_claude-haiku-4.5.runs.jsonl  anthropic_claude-sonnet-4.5-exp2.runs.jsonl  anthropic_claude-sonnet-4.6.runs.jsonl  cross-model-report.md  deepseek_deepseek-v4-pro.runs.jsonl  google_gemini-3.1-pro-preview.runs.jsonl  moonshotai_kimi-k2.6.runs.jsonl  openai_gpt-5-mini-retry.runs.jsonl  openai_gpt-5-mini.runs.jsonl  openai_gpt-5.2.runs.jsonl  openai_gpt-5.4.runs.jsonl  openai_gpt-5.5.runs.jsonl  z-ai_glm-5.runs.jsonl
book/src/: ch04-streaming-and-deltas.md  ch17-mcp.md  feature-flags.md  installation.md
crates/agentkit/: Cargo.toml  README.md
crates/agentkit-adapter-completions/: Cargo.toml  README.md
crates/agentkit-adapter-completions/src/: lib.rs  request.rs  response.rs  sse.rs  stream.rs
crates/agentkit-capabilities/: Cargo.toml
crates/agentkit-compaction/: Cargo.toml
crates/agentkit-context/: Cargo.toml
crates/agentkit-http/: README.md
crates/agentkit-integration-tests/: Cargo.toml
crates/agentkit-integration-tests/src/: http_mcp_server.rs
crates/agentkit-integration-tests/tests/: compose_tool.rs  mcp_manager.rs
crates/agentkit-loop/: Cargo.toml
crates/agentkit-loop/src/: lib.rs
crates/agentkit-mcp/: Cargo.toml  README.md
crates/agentkit-mcp/src/: lib.rs
crates/agentkit-provider-anthropic/: Cargo.toml
crates/agentkit-provider-cerebras/: Cargo.toml
crates/agentkit-provider-groq/: Cargo.toml  README.md
crates/agentkit-provider-groq/src/: lib.rs
crates/agentkit-provider-mistral/: Cargo.toml  README.md
crates/agentkit-provider-mistral/src/: lib.rs
crates/agentkit-provider-ollama/: Cargo.toml  README.md
crates/agentkit-provider-ollama/src/: lib.rs
crates/agentkit-provider-openai/: Cargo.toml  README.md
crates/agentkit-provider-openai/src/: lib.rs
crates/agentkit-provider-openrouter/: Cargo.toml  README.md
crates/agentkit-provider-openrouter/src/: lib.rs
crates/agentkit-provider-vllm/: Cargo.toml  README.md
crates/agentkit-provider-vllm/src/: lib.rs
crates/agentkit-reporting/: Cargo.toml  README.md
crates/agentkit-task-manager/: Cargo.toml
crates/agentkit-tool-compose/: Cargo.toml  README.md
crates/agentkit-tool-compose/src/: lib.rs
crates/agentkit-tool-fs/: Cargo.toml
crates/agentkit-tool-shell/: Cargo.toml
crates/agentkit-tool-skills/: Cargo.toml
crates/agentkit-tools-core/: Cargo.toml
crates/agentkit-tools-core/src/: lib.rs
crates/agentkit/src/: lib.rs
docs/: README.md  acp.md  compose-case-study.md  feature-flags.md  mcp.md
examples/openrouter-codemod/src/: main.rs
examples/openrouter-coding-agent/: README.md
examples/openrouter-coding-agent/src/: main.rs
examples/openrouter-parallel-agent/src/: main.rs
projects/how/: Cargo.toml
