[workspace]
members = [
    "crates/agentkit-compaction",
    "crates/agentkit-core",
    "crates/agentkit-context",
    "crates/agentkit-capabilities",
    "crates/agentkit-tools-core",
    "crates/agentkit-tools-derive",
    "crates/agentkit-task-manager",
    "crates/agentkit-loop",
    "crates/agentkit",
    "crates/agentkit-adapter-completions",
    "crates/agentkit-provider-openrouter",
    "crates/agentkit-provider-openai",
    "crates/agentkit-provider-ollama",
    "crates/agentkit-provider-vllm",
    "crates/agentkit-provider-groq",
    "crates/agentkit-provider-mistral",
    "crates/agentkit-provider-anthropic",
    "crates/agentkit-provider-cerebras",
    "crates/agentkit-reporting",
    "crates/agentkit-tool-fs",
    "crates/agentkit-tool-shell",
    "crates/agentkit-tool-compose",
    "crates/agentkit-tool-skills",
    "crates/agentkit-http",
    "crates/agentkit-mcp",
    "crates/agentkit-integration-tests",
    "examples/anthropic-chat",
    "examples/cerebras-batch",
    "examples/cerebras-chat",
    "examples/openrouter-chat",
    "examples/openrouter-codemod",
    "examples/openrouter-coding-agent",
    "examples/openrouter-context-agent",
    "examples/openrouter-agent-cli",
    "examples/openrouter-compaction-agent",
    "examples/openrouter-context-window-compaction",
    "examples/openrouter-parallel-agent",
    "examples/openrouter-macro-tool",
    "examples/openrouter-mcp-tool",
    "examples/openrouter-session-persistence",
    "examples/openrouter-subagent-tool",
    "examples/mcp-reference-interop",
    "examples/mcp-dynamic-auth",
    "projects/how",
    "benchmarks/compose-bench",
]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/danielkov/agentkit"
license = "MIT"
repository = "https://github.com/danielkov/agentkit"
rust-version = "1.92"
version = "0.9.0"

[workspace.dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
base64 = "0.22.1"
futures-util = "0.3.31"
futures-timer = "3.0.3"
tracing = "0.1"
schemars = { version = "1", default-features = false }
mlua = { version = "0.11.6", features = ["lua54", "vendored", "serialize", "async", "send"] }
