[package]
description = "Generic OpenAI-compatible chat completions adapter for agentkit."
homepage.workspace = true
name = "agentkit-adapter-completions"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-core = { version = "0.9.0", path = "../agentkit-core" }
agentkit-http = { version = "0.9.0", path = "../agentkit-http" }
agentkit-loop = { version = "0.9.0", path = "../agentkit-loop" }
agentkit-tools-core = { version = "0.9.0", path = "../agentkit-tools-core" }
async-trait.workspace = true
base64.workspace = true
futures-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
