[package]
description = "Transcript compaction triggers, strategies, pipelines, and backend hooks for agentkit."
homepage.workspace = true
name = "agentkit-compaction"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-core = { version = "0.9.0", path = "../agentkit-core" }
agentkit-loop = { version = "0.9.0", path = "../agentkit-loop" }
async-trait.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
