[package]
description = "Runtime-agnostic loop driver, interrupts, and model session traits for agentkit."
homepage.workspace = true
name = "agentkit-loop"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-capabilities = { version = "0.9.0", path = "../agentkit-capabilities" }
agentkit-core = { version = "0.9.0", path = "../agentkit-core" }
agentkit-task-manager = { version = "0.9.0", path = "../agentkit-task-manager" }
agentkit-tools-core = { version = "0.9.0", path = "../agentkit-tools-core" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
