[package]
description = "Cerebras Inference API provider adapter for agentkit."
homepage.workspace = true
name = "agentkit-provider-cerebras"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = ["streaming"]
streaming = []
compression = ["dep:flate2", "dep:rmp-serde"]
predicted-outputs = []
service-tiers = []
batch = []
experimental = ["service-tiers", "predicted-outputs", "batch"]

[dependencies]
agentkit-core = { version = "0.9.0", path = "../agentkit-core" }
agentkit-http = { version = "0.9.0", path = "../agentkit-http" }
agentkit-loop = { version = "0.9.0", path = "../agentkit-loop" }
agentkit-tools-core = { version = "0.9.0", path = "../agentkit-tools-core" }
async-trait.workspace = true
futures-util.workspace = true
futures-timer.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
bytes = "1"
flate2 = { version = "1", optional = true }
rmp-serde = { version = "1", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
