[package]
description = "Mistral provider adapter for agentkit."
homepage.workspace = true
name = "agentkit-provider-mistral"
readme = "README.md"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
agentkit-adapter-completions = { version = "0.9.0", path = "../agentkit-adapter-completions" }
agentkit-core = { version = "0.9.0", path = "../agentkit-core" }
agentkit-http = { version = "0.9.0", path = "../agentkit-http" }
agentkit-loop = { version = "0.9.0", path = "../agentkit-loop" }
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
