[package]
description = "Reporting observers and event consumers for agentkit loops."
homepage.workspace = true
name = "agentkit-reporting"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
tracing = ["dep:tracing"]

[dependencies]
agentkit-core = { version = "0.9.0", path = "../agentkit-core" }
agentkit-loop = { version = "0.9.0", path = "../agentkit-loop" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
