[package]
description = "Task manager abstractions and implementations for tool execution scheduling."
homepage.workspace = true
name = "agentkit-task-manager"
readme = "README.md"
repository.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
agentkit-core = { version = "0.9.0", path = "../agentkit-core" }
agentkit-tools-core = { version = "0.9.0", path = "../agentkit-tools-core" }
async-trait.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }

[dev-dependencies]
serde_json.workspace = true
