[package]
name = "how-cli"
description = "Ask your terminal how to do things."
readme = "README.md"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "how"
path = "src/main.rs"

[dependencies]
agentkit-core = { version = "0.9.0", path = "../../crates/agentkit-core" }
agentkit-loop = { version = "0.9.0", path = "../../crates/agentkit-loop" }
agentkit-tools-core = { version = "0.9.0", path = "../../crates/agentkit-tools-core" }
agentkit-provider-openrouter = { version = "0.9.0", path = "../../crates/agentkit-provider-openrouter" }
async-trait.workspace = true
crossterm = "0.29"
dotenvy.workspace = true
serde_json.workspace = true
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "signal", "time"] }
